# dynamic_transformers

./: pyproject.toml  requirements.txt
config/owt_10k/: gpt2_nano.yaml  llama_nano.yaml  nano.yaml
notebooks/: plot_finetune.ipynb  plot_perplexity.ipynb  plot_utils.py  sensitivity_analysis.ipynb
qkvflow/: finetune.py  lora.py  train_lm.py
qkvflow/analysis/: lyapunov.py  spectral.py  utils.py
qkvflow/nn/: dynamic.py  dynamic_llama.py  time_embed.py
qkvflow/utils/: jax_utils.py
