[project]
name = "qkvflow"
version = "0.0.1"
description = "Neural ODE Transformers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["qkvflow/*"]

[tool.ruff]
preview = true
exclude = [
    ".git",
    "build",
    "__pycache__",
]
line-length = 88
indent-width = 2
target-version = "py39"
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
fixable = ["I001", "F401"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false

# [tool.ruff.per-file-ignores]
# put per-file-ignores here